# MwjRunner

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  MEMORY.md  README.en.md  README.md  conftest.py  pyproject.toml  pytest.ini  ruff.toml
.claude/code-review/: SKILL.md
doc/: M7-平台化增强进度.md  M7需求规划.md  下一步计划.md  使用手册-入门篇.md  使用手册-进阶篇.md  使用手册.md  发布质量门禁.md  平台接入指南.md  开发问题跟踪.md  技术方案.md  部署手册.md  需求规格说明书.md
examples/: README.md  mwjrunner.yaml  run_all.bat  run_all.sh
examples/api/: README.md  pyproject.toml
examples/api/app/: main.py
examples/api/tests/: test_api.py
examples/cases/: health.yaml  health_fail.yaml  login.yaml  login_profile.yaml  quickstart_httpbin.yaml
examples/data/: sample.txt  users.csv  users.json
examples/envs/: dev.yaml  prod.yaml  test.yaml
examples/hooks/: auth_hook.py
mwjrunner/: __init__.py  cli.py
mwjrunner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mwjrunner/assertions/: __init__.py  builtin.py  model.py  registry.py
mwjrunner/auth/: __init__.py
mwjrunner/cases/: __init__.py  data_driver.py  discovery.py  errors.py  filter.py  loader.py  model.py
mwjrunner/config/: __init__.py  loader.py  model.py
mwjrunner/core/: __init__.py  quality_gate.py  runner.py
mwjrunner/data/: __init__.py
mwjrunner/hooks/: __init__.py  executor.py
mwjrunner/http/: __init__.py  executor.py  model.py
mwjrunner/importers/: __init__.py  openapi.py
mwjrunner/logging/: __init__.py  (+4 more)
platform/: README.md
platform/backend/: pyproject.toml
platform/backend/app/: main.py
platform/backend/app/api/: benchmarks.py  cases.py  ci_templates.py  environments.py  executions.py  mocks.py  notifications.py  perf.py  pipelines.py  scenarios.py  stats.py  users.py  webhooks.py  workers.py  ws.py
platform/backend/app/core/: __init__.py  database.py  permissions.py  security.py
platform/backend/app/engine/: __init__.py
platform/backend/app/models/: __init__.py  benchmark.py  case.py  environment.py  execution.py  mock.py  pipeline.py  scenario.py  user.py  worker.py
platform/backend/app/schemas/: benchmark.py  case.py  environment.py  execution.py  mock.py  pipeline.py  user.py  worker.py
scripts/: release_check.py  sync_agent_assets.py
tests/: __init__.py
(+95 files in other folders)
