[project]
name = "mwjrunner"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "jsonschema>=4.26.0",
    "pyyaml>=6.0.3",
    "tzdata>=2026.2",
]

[project.scripts]
mwjrunner = "mwjrunner.cli:main"

[tool.setuptools.packages.find]
include = ["mwjrunner*"]

[tool.setuptools.package-data]
mwjrunner = ["reports/template.html"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
