[project]
name = "mwjrunner"
version = "1.0.0"
description = "Python 接口自动化测试执行引擎 — Run APIs, Run Dreams"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "jsonschema>=4.26.0",
    "pyyaml>=6.0.3",
    "tzdata>=2026.2",
]

[project.scripts]
mwjrunner = "mwjrunner.cli:main"

[tool.setuptools.packages.find]
include = ["mwjrunner*"]

[tool.setuptools.package-data]
mwjrunner = ["reports/template.html"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
