[project]
name = "mwjrunner-platform"
version = "0.1.0"
description = "MwjRunner 接口自动化测试平台"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.10.0",
    "aiosqlite>=0.21.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "httpx>=0.28.1",
]
